Working with some api calls

--- a/wasm-bs-photo-app-1/Pages/FileManagerTest1.razor
+++ b/wasm-bs-photo-app-1/Pages/FileManagerTest1.razor
@@ -95,7 +95,7 @@
                     </div>
                     <div class="file-box">
                         <div class="file">
-                            <a href="" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+                            <a href="" data-bs-toggle="modal" data-bs-target="#staticBackdrop2">
                                 <span class="corner"></span>
 
                                 <div class="image">
@@ -284,11 +284,11 @@
 
 
 <!-- Modal -->
-<div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+<div class="modal fade" id="staticBackdrop2" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdrop2Label" aria-hidden="true">
     <div class="modal-dialog modal-lg">
         <div class="modal-content">
             <div class="modal-header">
-                <h1 class="modal-title fs-5 text-truncate" id="staticBackdropLabel">
+                <h1 class="modal-title fs-5 text-truncate" id="staticBackdrop2Label">
  
                         Italy streetxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx.jpg
                       
